GET_TOOLS_BUTTONS

--- a/assets/SCSS/constants.scss
+++ b/assets/SCSS/constants.scss
@@ -1,5 +1,13 @@
 $white: #FFFFFF;
 $liteGreen: #12D26B;
+$greyMiddle: #43474A;
+$greyLite: #8e9ca8;
+
+$fullWidth: 1920px;
+$generalWidth: 1230px;
+
+
+
 
 
 $red: #ec0505;
