--- a/assets/SCSS/constants.scss
+++ b/assets/SCSS/constants.scss
@@ -1,7 +1,10 @@
 $white: #FFFFFF;
 $liteGreen: #12D26B;
 $greyMiddle: #43474A;
+$greyDark: #575B5E;
+
 $greyLite: #8e9ca8;
+$yellow: #F5D89F;
 
 $fullWidth: 1920px;
 $generalWidth: 1230px;
