--- a/assets/SCSS/constants.scss
+++ b/assets/SCSS/constants.scss
@@ -9,6 +9,7 @@ $yellow: #F5D89F;
 $fullWidth: 1920px;
 $generalWidth: 1230px;
 $desktopWidth: 1200px;
+$iPhoneWidth: 700px;
 $mobileWidth: 480px;
 
 
