--- a/assets/SCSS/fonts.scss
+++ b/assets/SCSS/fonts.scss
@@ -76,3 +76,14 @@ $generalFontSize_number: 16;
   line-height: 25px;
   color: #F3F3F3;
 }
+
+%font__48-600-lite {
+  font-family: TT Norms;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 48px;
+  line-height: 110%;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: #575B5E;
+}
