GET_TECHNO_MENU

--- a/assets/SCSS/fonts.scss
+++ b/assets/SCSS/fonts.scss
@@ -87,3 +87,13 @@ $generalFontSize_number: 16;
   letter-spacing: 0.02em;
   color: #575B5E;
 }
+
+%font__14-400-grey {
+  font-family: Open Sans;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 112.69%;
+  color: #575B5E;
+
+}
