--- a/assets/SCSS/constants.scss
+++ b/assets/SCSS/constants.scss
@@ -2,23 +2,21 @@ $white: #FFFFFF;
 $liteGreen: #12D26B;
 $greyMiddle: #43474A;
 $greyDark: #575B5E;
-
 $greyLite: #8e9ca8;
+$grey: #E5E5E5;
 $yellow: #F5D89F;
+
 
 $fullWidth: 1920px;
 $generalWidth: 1230px;
 $desktopWidth: 1200px;
-$iPhoneWidth: 700px;   //<<<<<<<<<<<<<<<<<<
+$iPhoneWidth: 700px;
 $mobileWidth: 480px;
+$point_2: 1100px;
+
 
 $rowHeight: 12.5rem;   //(200);
 
-
-
-$red: #ec0505;
-
-$grey: #E5E5E5;
 
 
 
